--- a/alexaweb.html
+++ b/alexaweb.html
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-sm-4">
     <h2 id="AboutMe"> About Me</h2>
-      <div><h5><img src="mepicture.jpg" alt="mepicture"
+      <div><h5><img src="Alexa.JPG" alt="mepicture"
       style= "width:200px;height:230px;"></h5></div>
       <p id="margin">I was born in Mexico and came to the United States at the age of 7. I have two smaller siblings ages 9 and 8 and a little one-year-old sister.</p>
       <h3>Links to My Most Visited Places </h3>
